# project4

./: .gitignore  pyproject.toml
config/: settings.py  urls.py
users/: urls.py
users/migrations/: 0001_initial.py
vehicle/: models.py  permissions.py  serializers.py  services.py  tests.py  urls.py  validators.py  views.py
vehicle/migrations/: 0001_initial.py  0002_moto.py  0003_milage.py  0004_alter_milage_car.py  0005_alter_milage_moto.py
