[tool.poetry]
name = "project4"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.3"
pillow = "^11.2.1"
psycopg2-binary = "^2.9.10"
djangorestframework = "^3.16.0"
dotenv = "^0.9.9"
djangorestframework-simplejwt = "^5.5.0"
django-filter = "^25.1"
coverage = "^7.9.1"
drf-yasg = "^1.21.10"
django-cors-headers = "^4.7.0"
requests = "^2.32.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
